some modifs in predicates examples results

--- a/test/doc/predicates/CMakeLists.txt
+++ b/test/doc/predicates/CMakeLists.txt
@@ -10,6 +10,7 @@ SET( SOURCES
     operators.cpp
     predicates.cpp
     is_denormal.cpp
+    is_equal.cpp
     is_equal_with_equal_nans.cpp
     is_eqz.cpp
     is_even.cpp
@@ -36,6 +37,7 @@ SET( SOURCES
     is_nltz.cpp
     is_normal.cpp
     is_not_denormal.cpp
+    is_not_equal.cpp
     is_not_equal_with_equal_nans.cpp
     is_not_greater_equal.cpp
     is_not_greater.cpp
