reordering and typos for functors lxxx

--- a/test/doc/swar/CMakeLists.txt
+++ b/test/doc/swar/CMakeLists.txt
@@ -7,6 +7,7 @@
 ##===================================================================================================
 
 SET( SOURCES
+    lookup.cpp
     shuffle.unary.cpp
     shuffle.binary.cpp
     shuffle.perm.cpp
