clamp with tests benches and doc

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -53,6 +53,7 @@ add_subdirectory(bitwise_xor)
 ####add_subdirectory(broadcast)
 add_subdirectory(cbrt)
 add_subdirectory(ceil)
+add_subdirectory(clamp)
 add_subdirectory(clz)
 add_subdirectory(compare_equal)
 add_subdirectory(compare_greater)
