--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(bitwise_xor)
 add_subdirectory(cast)
 add_subdirectory(cbrt)
 add_subdirectory(ceil)
+add_subdirectory(clamp)
 add_subdirectory(clz)
 add_subdirectory(compare_equal)
 add_subdirectory(compare_greater)
