typos scalar insted of simd in some tests for alll any and average

--- a/bench/function/scalar/ifnot_neg/CMakeLists.txt
+++ b/bench/function/scalar/ifnot_neg/CMakeLists.txt
@@ -13,6 +13,6 @@ set(SOURCES
   regular.double.m10_10_m10_10.cpp
 )
 
-make_bench("function.scalar.if_notneg" ${SOURCES})
+make_bench("function.scalar.ifnot_neg" ${SOURCES})
 
 ## --------------------------------------------------------------------------------------
