--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -16,6 +16,7 @@ INPUT                 += @PROJECT_SOURCE_DIR@/include/boost/simd/memory/
 INPUT                 += @PROJECT_SOURCE_DIR@/include/boost/simd/meta
 INPUT                 += @PROJECT_SOURCE_DIR@/include/boost/simd/meta/hierarchy
 INPUT                 += @PROJECT_SOURCE_DIR@/include/boost/simd/range/
+INPUT                 += @PROJECT_DOC_DIR@/concept
 INPUT                 += @PROJECT_DOC_DIR@/custom
 INPUT                 += @PROJECT_DOC_DIR@/custom/sections/faq
 INPUT                 += @PROJECT_DOC_DIR@/custom/sections/home
