--- a/bench/function/scalar/fms/CMakeLists.txt
+++ b/bench/function/scalar/fms/CMakeLists.txt
@@ -13,6 +13,14 @@ set(SOURCES
   regular.double.m10_10_m10_10_m10_10.cpp
   pedantic.float.m10_10_m10_10_m10_10.cpp
   pedantic.double.m10_10_m10_10_m10_10.cpp
+  pedantic.int16_t.m10_10_m10_10_m10_10.cpp
+  pedantic.int32_t.m10_10_m10_10_m10_10.cpp
+  pedantic.int64_t.m10_10_m10_10_m10_10.cpp
+  pedantic.int8_t.m10_10_m10_10_m10_10.cpp
+  regular.int16_t.m10_10_m10_10_m10_10.cpp
+  regular.int32_t.m10_10_m10_10_m10_10.cpp
+  regular.int64_t.m10_10_m10_10_m10_10.cpp
+  regular.int8_t.m10_10_m10_10_m10_10.cpp
 )
 
 make_bench("function.scalar.fms" ${SOURCES})
