if_neg ifnot_neg benches

--- a/bench/function/simd/ifnot_neg/CMakeLists.txt
+++ b/bench/function/simd/ifnot_neg/CMakeLists.txt
@@ -11,6 +11,10 @@
 set(SOURCES
   regular.float.m10_10_m10_10.cpp
   regular.double.m10_10_m10_10.cpp
+  regular.int16_t.m10_10_m10_10.cpp
+  regular.int32_t.m10_10_m10_10.cpp
+  regular.int64_t.m10_10_m10_10.cpp
+  regular.int8_t.m10_10_m10_10.cpp
 )
 
 make_bench("function.simd.ifnot_neg" ${SOURCES})
