--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -222,6 +222,7 @@ add_subdirectory(pow2)
 add_subdirectory(pow_abs)
 add_subdirectory(predecessor)
 add_subdirectory(prev)
+add_subdirectory(quadrant)
 add_subdirectory(rec)
 add_subdirectory(rem)
 add_subdirectory(rem_pio2)
