--- a/bench/function/scalar/quadrant/CMakeLists.txt
+++ b/bench/function/scalar/quadrant/CMakeLists.txt
@@ -1,12 +1,12 @@
 ## --------------------------------------------------------------------------------------
-##                              Copyright 2016 - NumScale SAS
+##                              Copyright 2017 - NumScale SAS
 ##
 ##                    Distributed under the Boost Software License Version 1.0
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ## --------------------------------------------------------------------------------------
 
-## benches for functor quadrant in simd mode.
+## benches for functor quadrant in scalar mode.
 
 set(SOURCES
   regular.float.m10_10.cpp
@@ -21,6 +21,6 @@ set(SOURCES
   regular.uint8_t.0_10.cpp
 )
 
-make_bench("function.simd.quadrant" ${SOURCES})
+make_bench("function.scalar.quadrant" ${SOURCES})
 
 ## --------------------------------------------------------------------------------------
