--- a/test/api/memory/CMakeLists.txt
+++ b/test/api/memory/CMakeLists.txt
@@ -1,14 +1,14 @@
 ##===================================================================================================
-##                 Copyright 2016   NumScale SAS
+##                              Copyright 2016 NumScale SAS
 ##
 ##                   Distributed under the Boost Software License, Version 1.0.
 ##                        See accompanying file LICENSE.txt or copy at
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 
-add_subdirectory(helper)
-add_subdirectory(meta)
-add_subdirectory(memory)
-add_subdirectory(pack)
-add_subdirectory(range)
-add_subdirectory(algorithm)
+set ( SOURCES
+      is_aligned.cpp
+    )
+
+make_unit( "api.memory" ${SOURCES})
+make_coverage("api.memory" ${SOURCES})
