--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -359,6 +359,7 @@ set ( SOURCES
       sqrt.regular.cpp
       sqrt.raw.cpp
       stirling.cpp
+      subadd.cpp
       successor.cpp
       sum.cpp
       swapbytes.cpp
