Introduce raw_(nearbyint)

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -288,6 +288,7 @@ set ( SOURCES
       multiplies.saturated.cpp
       nbtrue.cpp
       nearbyint.cpp
+      nearbyint.raw.cpp
       negate.cpp
       negatenz.cpp
       if_neg.cpp
