adding fmasubadd, correcting docs and adding examples

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -140,6 +140,7 @@ set ( SOURCES
       firstbitset.cpp
       firstbitunset.cpp
       floor.cpp
+      fmasubadd.cpp
       fma.regular.cpp
       fma.pedantic.cpp
       fms.cpp
