--- a/.travis.yml
+++ b/.travis.yml
@@ -287,7 +287,7 @@ matrix:
 # Prepare build
 ##===================================================================================================
 before_script:
-  - export BOOST_ROOT=build/_install/include
+  - export BOOST_ROOT=boost-header-only/boost-1.64.0
   - mkdir build
   - cd build
   - $TOOLSET --version
@@ -297,7 +297,7 @@ before_script:
 # Build unit and run test
 ##===================================================================================================
 script:
-  - make update.boost-header-only | grep -v "^-- " # Silent installation
+  - git clone https://github.com/NumScale/boost-header-only.git
   - make update.stf | grep -v "^-- " # Silent installation
   - make  -j 4 -k  $TARGETS.unit
   - ctest -j 4 -R ^$TARGETS.*.unit
