--- a/.travis.yml
+++ b/.travis.yml
@@ -287,7 +287,7 @@ matrix:
 # Prepare build
 ##===================================================================================================
 before_script:
-  - export BOOST_ROOT=boost-header-only/boost-1.64.0
+  - export BOOST_ROOT=$(pwd)/boost-header-only/boost-1.64.0
   - mkdir build
   - cd build
   - $TOOLSET --version
