--- a/.travis.yml
+++ b/.travis.yml
@@ -293,7 +293,7 @@ before_script:
   - git clone https://github.com/NumScale/boost-header-only.git
   - export BOOST_ROOT=$(pwd)/boost-header-only/boost-1.64.0
   - echo $BOOST_ROOT
-  - wget https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip --no-check-certificates
+  - wget https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip
   - unzip ninja-linux.zip
   - export PATH=$PATH:$(pwd)
   - cmake .. -DIS_TRAVIS_CI= -DCMAKE_CXX_COMPILER=$TOOLSET -DCMAKE_CXX_FLAGS="$SIMD_EXT $OPT -I$HOME/dispatch/include" -DSIMD_EXT=$SIMD_EXT -DTOOLSET=$TOOLSET -GNinja
