--- a/.travis.yml
+++ b/.travis.yml
@@ -293,9 +293,12 @@ before_script:
   - git clone https://github.com/NumScale/boost-header-only.git
   - export BOOST_ROOT=$(pwd)/boost-header-only/boost-1.64.0
   - echo $BOOST_ROOT
+  - CMAKE_DIR=cmake-3.8.2-Linux-x86_64
   - wget https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip
+  - wget https://cmake.org/files/v3.8/$CMAKE_DIR.tar.gz
   - unzip ninja-linux.zip
-  - export PATH=$PATH:$(pwd)
+  - tar xzf $CMAKE_DIR.tar.gz
+  - export PATH=$CMAKE_DIR/bin:$(pwd):$PATH
   - cmake --version
   - cmake -G
   - cmake .. -DIS_TRAVIS_CI= -DCMAKE_CXX_COMPILER=$TOOLSET -DCMAKE_CXX_FLAGS="$SIMD_EXT $OPT -I$HOME/dispatch/include" -DSIMD_EXT=$SIMD_EXT -DTOOLSET=$TOOLSET -GNinja
