--- a/.travis.yml
+++ b/.travis.yml
@@ -294,8 +294,8 @@ before_script:
   - export BOOST_ROOT=$(pwd)/boost-header-only/boost-1.64.0
   - echo $BOOST_ROOT
   - CMAKE_DIR=cmake-3.8.2-Linux-x86_64
-  - wget https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip
-  - wget https://cmake.org/files/v3.8/$CMAKE_DIR.tar.gz
+  - curl -O https://github.com/ninja-build/ninja/releases/download/v1.7.2/ninja-linux.zip
+  - curl -O https://cmake.org/files/v3.8/$CMAKE_DIR.tar.gz
   - unzip ninja-linux.zip
   - tar xzf $CMAKE_DIR.tar.gz
   - export PATH=$CMAKE_DIR/bin:$(pwd):$PATH
