--- a/cmake/Boost.SIMDConfig.cmake.in
+++ b/cmake/Boost.SIMDConfig.cmake.in
@@ -30,7 +30,7 @@ set(@PROJECT_NAME@_SUBMINOR_VERSION    @PROJECT_SUBMINOR_VERSION@)
 set(@PROJECT_NAME@_SUBSUBMINOR_VERSION @PROJECT_SUBSUBMINOR_VERSION@)
 
 ##
-set(@PROJECT_NAME@_INCLUDE_DIRS        @CMAKE_INSTALL_PREFIX@/include/)
+set(@PROJECT_NAME@_INCLUDE_DIRS        "@CMAKE_INSTALL_PREFIX@/include/")
 
 ##
 include(FindPackageHandleStandardArgs)
